syntax="proto3";

package NAlice.NSocialSharing.Context;

import "alice/paskills/social_sharing/proto/api/web_page.proto";
import "alice/paskills/social_sharing/proto/api/web_api.proto";

option go_package = "a.yandex-team.ru/alice/paskills/social_sharing/proto/context";
option java_package = "ru.yandex.alice.social.sharing.proto.context";

message TSignatureValidationParams {
    map<string, string> UrlEncodedParams = 1 [json_name = "url_encoded_params"];
}

message TSignatureValidationOk {
}

message TExternalSkillUrlParams {
    string SkillId = 1 [json_name = "skill_id"];
    string ImageUrl = 2 [json_name = "image_url"];
    string TitleText = 3 [json_name = "title_text"];
    string SubtitleText = 4 [json_name = "subtitle_text"];
    string ButtonText = 5 [json_name = "button_text"];
    string Payload = 6 [json_name = "payload"];
    string Signature = 7 [json_name = "signature"];
    repeated string RequiredInterfaces = 8 [json_name = "required_interfaces"];
    bool Autostart = 9 [json_name = "autostart"];
}

message TStatelessDocumentContext {

    oneof Params {
        TExternalSkillUrlParams ExternalSkillUrlParams = 1 [json_name = "external_skill_url_params"];
    }

}

message TAvatarsImage {
    string Url = 1 [json_name = "url", deprecated = true];
    string AvatarsId = 2 [json_name = "avatars_id"];
}

message TNotificatorResponse {
    TExternalSkillTemplate.ESendPushStatus SendPushStatus = 1 [json_name = "send_push_status"];
    TWebPageTemplateData.TDevice ActivatedDevice = 2 [json_name = "activated_device"];
}
